# llm_marketplace

./: .env.local  .prettierrc  Cargo.toml  README.md  components.json  dfx.json  next.config.js  notes.txt  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.next/: BUILD_ID  build-manifest.json  export-detail.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  react-loadable-manifest.json  required-server-files.json  trace
.next/cache/: .tsbuildinfo
.next/server/: _error.js  middleware-build-manifest.js  middleware-react-loadable-manifest.js
.next/server/pages/: 404.html  500.html  _app.js  _app.js.nft.json  _error.js  _error.js.nft.json  dashboard.js  index.html  index.js  index.js.nft.json
.next/server/vendor-chunks/: @swc.js  lucide-react.js  next.js
.next/static/7-K3Cd6ngovdfoJOCovrI/: _buildManifest.js
.next/static/chunks/: 475-d4d14a487316f95d.js  819-f81b044ad8908ee7.js  _error.js  webpack.js
.next/static/css/: 86c82ffacc061265.css  edbd964dbb2089ff.css
.next/static/webpack/: 0c978fda27982a16.webpack.hot-update.json  (+17 more)
backend/hello/: Cargo.toml
backend/hello/src/: lib.rs
backend/model_storage/: Cargo.toml  model_storage.did
backend/model_storage/src/: lib.rs
src/components/: Dashboard.tsx  InternetIdentityLogin.tsx  LLMMarketplaceDashboard.tsx
src/lib/: utils.ts
src/llm_marketplace_backend/: Cargo.toml
src/llm_marketplace_frontend/: package.json
src/pages/: _app.tsx  dashboard.tsx  index.tsx
src/service/: ii.ts  interent_identity.ts  stable_storage.ts
src/styles/: global.css
(+44 files in other folders)
